# photochop

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: main.cpp
